--- a/3things02.html
+++ b/3things02.html
@@ -320,12 +320,17 @@
       clip: rect(0, 0, 0, 0);
       border: 0;
     }
+    @media (max-width: 640px) {
+      .card {
+        text-align: center;
+      }
+      h1, p, .cta {
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body>
-  <a class="cta sticky-cta" href="https://apps.apple.com/au/app/id1553693943" aria-label="Download on the App Store (sticky)">
-    Download Now
-  </a>
 
   <main class="wrap">
     <section class="hero">
