--- a/fastai.html
+++ b/fastai.html
@@ -164,12 +164,17 @@
       position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden;
       clip:rect(0,0,0,0); border:0;
     }
+    @media (max-width: 640px) {
+      .card {
+        text-align: center;
+      }
+      h1, p, .cta {
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body>
-  <a class="cta sticky-cta" href="https://apps.apple.com/us/app/chat-with-fast-ai/id1662608035" aria-label="Download on the App Store (sticky)">
-    <span>Download on the App Store</span>
-  </a>
 
   <main class="wrap">
     <div class="card">
