--- a/brainy.html
+++ b/brainy.html
@@ -59,17 +59,37 @@
       align-items: center;
       gap: 20px;
     }
+    footer a {
+      color: var(--muted);
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+    footer a:hover {
+      color: var(--fg);
+      text-decoration: underline;
+    }
     @media (min-width: 1024px) {
       .card-content {
         gap: 28px;
       }
     }
     .logo-img {
-      width: clamp(280px, 42vw, 420px);
+      width: clamp(380px, 50vw, 520px);
       height: auto;
       margin-top: 0;
       margin-bottom: 0;
       order: -1;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    footer a {
+      color: var(--muted);
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+    footer a:hover {
+      color: var(--fg);
+      text-decoration: underline;
     }
     @media (min-width: 1024px) {
       .card {
@@ -144,6 +164,15 @@
       color: var(--muted);
       opacity:.9;
     }
+    footer a {
+      color: var(--muted);
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+    footer a:hover {
+      color: var(--fg);
+      text-decoration: underline;
+    }
     @media (min-width: 1024px) {
       footer {
         grid-column: 1 / -1;
@@ -162,7 +191,7 @@
     @media (max-width: 640px) {
       .sticky-cta { display: inline-block; }
       .logo-img {
-        width: 160px;
+        width: 280px;
         margin-bottom: 30px;
       }
     }
@@ -194,8 +223,8 @@
       </div>
       <img src="images/brainyapp.png" alt="Brainy App" class="logo-img" />
       <footer>
-        <span class="sr-only">Legal</span>
-        <span>Privacy • Terms</span>
+        
+        <a href="privacy.html">Privacy</a> • <a href="terms.html">Terms</a>
       </footer>
     </div>
   </main>
