--- a/keeper.html
+++ b/keeper.html
@@ -47,12 +47,23 @@
       gap: 20px;
     }
     .logo-img {
-      width: 200px;
+      width: 280px;
       height: auto;
       margin-bottom: 0;
       border-radius: 0;
       box-shadow: none;
       order: -1;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    footer a {
+      color: var(--muted);
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+    footer a:hover {
+      color: var(--fg);
+      text-decoration: underline;
     }
     @media (min-width: 1024px) {
       .card {
@@ -117,6 +128,15 @@
       color: var(--muted);
       opacity:.9;
     }
+    footer a {
+      color: var(--muted);
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+    footer a:hover {
+      color: var(--fg);
+      text-decoration: underline;
+    }
     @media (min-width: 1024px) {
       footer {
         grid-column: 1 / -1;
@@ -135,7 +155,7 @@
     @media (max-width: 640px) {
       .sticky-cta { display: inline-block; }
       .logo-img {
-        width: 160px;
+        width: 280px;
         margin-bottom: 30px;
       }
     }
@@ -167,8 +187,8 @@
         </a>
       </div>
       <footer>
-        <span class="sr-only">Legal</span>
-        <span>Privacy • Terms</span>
+        
+        <a href="privacy.html">Privacy</a> • <a href="terms.html">Terms</a>
       </footer>
     </div>
   </main>
