--- a/dora.html
+++ b/dora.html
@@ -13,6 +13,17 @@
     content="Create stunning videos with OpenAI's Sora 2. Transform your imagination into reality with AI-powered video generation." />
   <meta property="og:type" content="website" />
   <link rel="canonical" href="https://sagalab.co/dora/">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WCHNSFRE62"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-WCHNSFRE62');
+  </script>
+
   <style>
     :root {
       --bg: #fff;
