--- a/dora.html
+++ b/dora.html
@@ -14,14 +14,27 @@
   <meta property="og:type" content="website" />
   <link rel="canonical" href="https://sagalab.co/dora/">
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WCHNSFRE62"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+  <!-- Firebase Analytics -->
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
 
-    gtag('config', 'G-WCHNSFRE62');
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDjXgGwqxDTT0KvOrumah1J1oPD-ZK4RKw",
+      authDomain: "savesoravideos.firebaseapp.com",
+      projectId: "savesoravideos",
+      storageBucket: "savesoravideos.firebasestorage.app",
+      messagingSenderId: "572303345337",
+      appId: "1:572303345337:web:2604a1b33f29ce9b52bd68",
+      measurementId: "G-LT5PSYCT95"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
 
   <style>
